<resources>
    <string name="app_name">EasyLoan</string>
    <string name="asset_statements">
         [{
         "include":"https://www.homecreditpk.com/.well-known/assetlinks.json"
         }]
    </string>
    <string name="dialog_duration_default">200</string>
    <string name="dialog_duration_scale">200</string>
    <string name="dialog_duration_left">200</string>
    <string name="dialog_duration_top">200</string>
    <string name="dialog_duration_right">200</string>
    <string name="dialog_duration_bottom">200</string>
    <string name="permission_bottom_hint">Launched by Sarmaya Microfinance Private Limited licensed by SECP</string>
    <string name="permission_hint">Please swipe to view all the content of agreement, and tick to agree before proceeding to the next step.</string>
    <string name="apply_now">Apply Now</string>
    <string name="facebook_app_id">595232018331642</string>
    <string name="fb_login_protocol_scheme">fb595232018331642</string>
    <string name="fb_client_token">637640ac1a5c12bb8c96d434e3757d59</string>
    <string name="branchkey">key_live_gl9yGsCcHgRge8Rc4YhlZapiusiomcQx</string>
    <string name="call_wp">call records</string>
    <string name="call_ml">If you authorize us to view the call records, we will provide you with a voice call for credit risk assessment to confirm that our application is installed on your mobile phone, and we will only download and transmit the call records to our server (https:/ /smpl.com.pk &#038; https://www.homecreditpk.com &#038; https://api2.branch.io/) to protect the online environment with your explicit consent. Under no circumstances will we share this data with third parties.</string>
    <string name="phone_wp">Cell phone</string>
    <string name="phone_ml">Your mobile number is used to confirm your identity and complete a risk assessment to assess the grant of the loan, we only obtain this information with your express consent, we will encrypt it using a secure data transfer protocol, we will not communicate with 3rd shared party party. When your assessment process is complete, your mobile number will be removed from the registry. Data will be encrypted and uploaded to our membership server https://smpl.com.pk &#038; https://www.homecreditpk.com &#038; https://api2.branch.io/ via HTTPS protocol. We will never share this data with third parties.</string>
    <string name="location_wp">Place</string>
    <string name="location_ml">We collect and monitor information about your device&quot;s location for customer analysis and fraud prevention, data will be encrypted and uploaded to our membership server via HTTPS protocol https://smpl.com.pk &#038; https://www.homecreditpk . com &#038; https://api2.branch.io/. We will never share this data with third parties.</string>
    <string name="sms_wp">SMS data collection</string>
    <string name="sms_ml">SMS content monitoring and collection: All SMS data will be encrypted and uploaded to the server through the APP, and we will collect all SMS data. SMS data will be encrypted and uploaded to our membership server via HTTPS protocol https://smpl.com.pk &#038; https://www.homecreditpk.com &#038; https://api2.branch.io/ We will never communicate with This communication data is shared with third parties.</string>
    <string name="applications_wp">Gather information about installed applications</string>
    <string name="applications_ml">Monitor and collect the content of installed applications: application name, application package name, application installation time, application installation time, data of installed applications will be encrypted and uploaded to us through HTTPS protocol https://smpl.com.pk. We will never share this data with third parties.</string>
    <string name="mpf_wp">MEDIA &#38; PHOTOS &#38; FILES</string>
    <string name="mpf_ml">We require the media, photos, and files permission that allows the App to enable you to upload photos or documents to complete the application form during your loan application journey. The calendar information will be uploaded to app.instantloan.space. We will delete the calendar information after we have determined your risk profile.</string>
    <string name="storage_wp">Storage</string>
    <string name="storage_ml">Access to your device&quot;s storage space requires your authorization, which will allow you to upload photos and/or documents to fill out the application form during the loan application process. Data will be encrypted and uploaded to our membership server https://smpl.com.pk &#038; https://www.homecreditpk.com &#038; https://api2.branch.io/ via HTTPS protocol. We will never share this data with third parties.</string>
    <string name="camera_wp">camera</string>
    <string name="camera_ml">Use a camera to take documents and/or photos required for the application and assessment process, and only with your express consent will we upload and transmit the contents of the call log in a secure online environment to (https://smpl. com.pk &#038; https://www.homecreditpk.com &#038; https://api2 ), we will never share this information with third party data.</string>
    <string name="calendar_wp">Calendar</string>
    <string name="calendar_ml">Enable calendar access when viewing your loan eligibility, reminding you of specific payment dates to avoid, data will be encrypted and uploaded to our HTTPS protocol https://smpl.com.pk and https://www.homecreditpk.com Membership Server &#038; https://api2.branch.io/ . We will never share this data with third parties.</string>
    <string name="device_wp">COLLECTION OF DEVICE INFORMATION</string>
    <string name="device_ml">The information the App collects, and how that information is used, depends on how you manage your privacy controls on your device.When you install the App, we store the information we collect with unique identifiers tied to the device you’re using.We collect information from the device when you download and install the App and explicitly seek permissions from YOU to get the required information from the device. The information we collect from your device includes the unique ID i.e. IMEI number, information on operating system, SDK version and mobile network information including carrier name, SIM Serial and SIM Slot, your profile information, list of installed apps, wi-fi information.We collect information about your device to provide automatic updates and additional security so that your account is not used in other people’s devices. In addition, the information provides us valuable feedback on your identity as a device holder as well as your device behaviour, thereby allowing us to improve our services and provide an enhanced customized user experience to you.</string>
    <string name="other_wp">COLLECTION OF OTHER NON-PERSONAL INFORMATION</string>
    <string name="s_skip">SKIP</string>
    <string name="s_agree">AGREE AND \n CONTINUE</string>
    <string name="wkg_pp">Privacy policy</string>
    <string name="camera_btn_camera">Camera</string>
    <string name="camera_btn_album">Album</string>
    <string name="camera_btn_cancel">Cancel</string>
    <string name="per_text1">grievance redressal officer</string>
    <string name="per_text2">email:</string>
    <string name="per_text3">support@sarmayamf.com</string>
    <string name="per_text4">phone:</string>
    <string name="per_text5">+92 320 2814058</string>
    <string name="dcp_wp1">Data / Cookies</string>
    <string name="dcp_ml1">We may set cookies to track your use of the App. These are used to enhance your experience with our App. We use cookies to help us identify who you are, so your login experience is smooth each time. Cookies also allow us to collect Non-Personally Identifiable Information from you, like which pages you visited and what links you clicked on. The use of this information helps us to create a more user-friendly experience for all visitors. In addition, we may use Third Party Advertising Companies to display advertisements on our App. By using the app, you signify your consent to our use of cookies. Please note that if you decline or delete these cookies, some parts of the App may not work properly.</string>
    <string name="dcp_wp12">USE AND DISCLOSURE OF YOUR PERSONAL AND OTHER INFORMATION</string>
    <string name="dcp_ml12">We access, store, and use the information we collect from to provide our Services, to research and develop new ones. We use personal information to provide the services you request, to customize your user experience, and to improve our services. To the extent we intend to use your personal information to market any product to you, we will provide you the ability to opt out of such uses.</string>
    <string name="dcp_wp13">Security Information</string>
    <string name="dcp_ml13">You can access your personal identity details on our App through your login and password. We recommend that you do not share your password with anyone. In addition, your personal details are stored on a secure server that only selected personnel contractors and authorized Agencies have access to. We encrypt certain sensitive information using Secure Socket Layer (SSL) technology to ensure that your personal details are safe as it is transmitted to us. However, you understand and accept no data transmission over the Internet can be guaranteed to be completely secure. We cannot ensure or warrant the security of any information that you transmit to us and you do so at your own risk. Data pilferage due to unauthorized hacking, virus attacks, and technical is possible and we take no liabilities or responsibilities for it.</string>
    <string name="dcp_wp14">Use and Disclosure of Your Personal and Other Information </string>
    <string name="dcp_ml14">We access, store, and use the information we collect from to provide our Services, to research and develop new ones. We use personal information to provide the services you request, to customize your user experience, and to improve our services. To the extent we intend to use your personal information to market any product to you, we will provide you the ability to opt out of such uses.</string>
    <string name="dcp_wp15">Privacy Policies of Third-Party Websites</string>
    <string name="dcp_ml15">This Privacy Policy only addresses the use and disclosure of information we collect from you. Other websites/apps that may be accessible through this App have their own privacy policies and data collection, use, and disclosure practices. If you link to any such website, we urge you to review such website′s privacy policy. We are not responsible for the policies or practices of third parties.</string>
    <string name="dcp_wp16">Policy Changes:</string>
    <string name="dcp_ml16">We may update this Privacy Policy to reflect changes to our information practices to facilitate the borrowers/customers. You are encouraged to check this privacy policy on a regular basis to be aware of the changes made to it to secure your privacy. </string>
</resources>