<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/iv_ser"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/ic_ser"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_p1_bg"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_p2_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/wkg_pp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_wp1"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_ml1"
                        android:textColor="#FFFFFF" />

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp2"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml2"-->
<!--                        android:textColor="#FFFFFF" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp3"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml3"-->
<!--                        android:textColor="#FFFFFF" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp4"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml4"-->
<!--                        android:textColor="#FFFFFF" />-->


<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp5"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml5"-->
<!--                        android:textColor="#FFFFFF" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp6"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml6"-->
<!--                        android:textColor="#FFFFFF" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp7"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml7"-->
<!--                        android:textColor="#FFFFFF" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp9"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml9"-->
<!--                        android:textColor="#FFFFFF" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp10"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml10"-->
<!--                        android:textColor="#FFFFFF" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_wp11"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textStyle="bold" />-->

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/dcp_ml11"-->
<!--                        android:textColor="#FFFFFF" />-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_wp12"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_ml12"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_wp13"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_ml13"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_wp14"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_ml14"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_wp15"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_ml15"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_wp16"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dcp_ml16"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_text1"
                    android:textColor="#FFD25D"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per_text2"
                        android:textColor="#FFD25D"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_underline"
                        android:text="@string/per_text3"
                        android:textColor="#FFD25D"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per_text4"
                        android:textColor="#FFD25D"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_underline"
                        android:text="@string/per_text5"
                        android:textColor="#FFD25D"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView">

            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ff333333"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tv_bottom"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_p1_bg"
            android:gravity="center"
            android:text="@string/s_skip"
            android:textColor="#007D7A"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_p2_bg"
            android:gravity="center"
            android:text="@string/s_agree"
            android:textColor="#ffffffff"
            android:textSize="13sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/permission_bottom_hint"
        android:textColor="#ff333333"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

</androidx.constraintlayout.widget.ConstraintLayout>